<resources>
    <string name="app_name">TransportOp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings for bottom navigation menu -->
    <string name="home">Home</string>
    <string name="find_route">Find Route</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="add_station">Add Station</string>

    <!-- Strings for Headers of page layouts -->
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="dashboard">Dashboard</string>
    <string name="create_vehicle">Create Vehicle</string>
    <string name="create_station">Create Station</string>

    <!-- Strings for station_list_view -->


    <!-- Strings for station_list_view -->
    <string name="default_street_address">La Mirada, Imperial</string>
    <string name="vendor_image_description">image of cartoon gas station filler</string>
    <string name="default_station_price">3.35</string>
    <string name="reg_price_text">Reg</string>
    <string name="mid_price_text">Mid</string>
    <string name="prem_price_text">Prem</string>
    <string name="diesel_price_text">Diesel</string>

    <!-- Strings for find_route_view -->
    <string-array name="prices">
        <item>reg</item>
        <item>mid</item>
        <item>prem</item>
        <item>diesel</item>
    </string-array>

</resources>
