<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    android:background="@drawable/round_corners_list_item">

    <ImageView
        android:id="@+id/vendorImage"
        android:layout_width="100dp"
        android:layout_height="125dp"
        android:layout_below="@+id/resultAddress"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:srcCompat="@drawable/station_image"
        android:contentDescription="@string/vendor_image_description" />
    <TextView
        android:id="@+id/resultAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/default_street_address"
        android:textColor="@color/fontColor"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/resultPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resultAddress"
        android:layout_marginStart="15dp"
        android:layout_marginTop="39dp"
        android:layout_toEndOf="@+id/vendorImage"
        android:background="@drawable/round_corners_station_prices"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/default_station_price"
        android:textAlignment="center"
        android:textColor="@color/fontColor"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/resultPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resultPrice"
        android:layout_marginStart="13dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/vendorImage"
        android:fontFamily="@font/rubik_bold"
        android:text="price"
        android:textAlignment="center"
        android:textColor="@color/fontColor"
        android:textSize="18sp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"/>


    <TextView
        android:id="@+id/resultAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resultAddress"
        android:layout_marginStart="30dp"
        android:layout_marginTop="39dp"
        android:layout_toEndOf="@+id/resultPrice"
        android:background="@drawable/round_corners_station_prices"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/default_station_price"
        android:textAlignment="center"
        android:textColor="@color/fontColor"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/resultAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resultPrice"
        android:layout_marginStart="13dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/resultPriceText"
        android:fontFamily="@font/rubik_bold"
        android:text="amount"
        android:textAlignment="center"
        android:textColor="@color/fontColor"
        android:textSize="18sp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"/>
</RelativeLayout>